--- a/environments/staging/environment.yaml
+++ b/environments/staging/environment.yaml
@@ -2,6 +2,7 @@ version: 1.0
 app:
   instances: 
     min: 1
+    max: 2
   version: 20c21a85-2c87-432e-9e11-8a902d921c5d
   env:
     - name: JVM_ARGS
