--- a/environments/staging/environment.yaml
+++ b/environments/staging/environment.yaml
@@ -3,7 +3,7 @@ app:
   instances:
     min: 1
     max: 2
-  version: 4a75c0c3-65c4-41c8-82c3-c85e72086a17
+  version: ""
   env:
     - name: JVM_ARGS
       value: "-DenvironmentType=stage"
